tests/ui/reachable/expr_cast.stderr
error: unreachable expression
  --> $DIR/expr_cast.rs:9:13
   |
LL |     let x = {return} as !;
   |             ^------^^^^^^
   |             ||
   |             |any code following this expression is unreachable
   |             unreachable expression
   |
note: the lint level is defined here
  --> $DIR/expr_cast.rs:4:9
   |
LL | #![deny(unreachable_code)]
   |         ^^^^^^^^^^^^^^^^

error[E0605]: non-primitive cast: `()` as `!`
  --> $DIR/expr_cast.rs:9:13
   |
LL |     let x = {return} as !;
   |             ^^^^^^^^^^^^^ an `as` expression can only be used to convert between primitive types or to coerce to a specific trait object

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0605`.
